--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,19 @@
 *.Rproj.user
 .Rhistory
 .RData
+
 mlr/*.tar.gz
 mlr/pkg
+mlr/pkg.Rcheck
 mlr/test_src.R
+
 mlrMBO/*.tar.gz
 mlrMBO/pkg
+mlrMBO/pkg.Rcheck
 mlrMBO/test_src.R
+
+doc/*.log
+doc/*.rst
+doc/tutorial/*.log
+doc/tutorial/*.rst
+
