--- a/mlr/skel/DESCRIPTION
+++ b/mlr/skel/DESCRIPTION
@@ -1,12 +1,21 @@
 Package: mlr
-Title:  mlr: Machine Learning in R. 
-Description: Interface to various classification and regression techniques with a unified interface, including machine-readable parameter descriptions. Generic resampling, including cross-validation, bootstrapping and subsampling.
+Title: mlr: Machine Learning in R.
+Description: Interface to a large number of classification and
+        regression techniques, including machine-readable parameter
+        descriptions. Generic resampling, including cross-validation,
+        bootstrapping and subsampling. Hyperparameter tuning with
+        modern optimization techniques. Filter and wrapper methods for
+        feature selection. Extension of basic learners with additional
+        operations. Nested resampling.
 Author: Bernd Bischl <bernd_bischl@gmx.net>
 Maintainer: Bernd Bischl <bernd_bischl@gmx.net>
 License: BSD_3_clause + file LICENSE
 Depends: ParamHelpers
 Imports: BBmisc, parallelMap, codetools
-Suggests: testthat, snowfall, ada, adabag, cmaes, DiceKriging, DiceOptim, e1071, earth, FNN, gbm, irace, kernlab, kknn, klaR, mboost, mda, mlbench, nnet, party, penalized, pls, randomForest, reshape, robustbase, rpart, rsm, RWeka, ROCR
+Suggests: testthat, snowfall, ada, adabag, cmaes, DiceKriging,
+        DiceOptim, e1071, earth, FNN, FSelector, gbm, irace, kernlab,
+        kknn, klaR, mboost, mda, mlbench, nnet, party, penalized, pls,
+        randomForest, reshape, robustbase, rpart, rsm, RWeka, ROCR
 LazyData: yes
 ByteCompile: yes
-Version: 1.0
+Version: 1.1
