--- a/mlrMBO/skel/DESCRIPTION
+++ b/mlrMBO/skel/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlrMBO
 Title:  mlr: Model-based optimization  
-Description: 
+Description:  mlr: Model-based optimization  
 Author: Bernd Bischl <bernd_bischl@gmx.net>
 Maintainer: Bernd Bischl <bernd_bischl@gmx.net>
 License: BSD
