mlrMBO: mini fix

--- a/mlrMBO/skel/DESCRIPTION
+++ b/mlrMBO/skel/DESCRIPTION
@@ -4,8 +4,8 @@ Description:  mlr: Model-based optimization
 Author: Bernd Bischl <bernd_bischl@gmx.net>
 Maintainer: Bernd Bischl <bernd_bischl@gmx.net>
 License: BSD
-Depends: ParamHelpers, mlr, ggplot2
-Imports: BBmisc
+Depends: ParamHelpers, mlr
+Imports: BBmisc, gridExtra, grid, ggplot2
 Suggests: cmaes, DiceOptim, emoa, soobench, testthat
 LazyData: yes
 ByteCompile: yes
