--- a/mlr/skel/DESCRIPTION
+++ b/mlr/skel/DESCRIPTION
@@ -13,7 +13,7 @@ URL: https://github.com/berndbischl/mlr
 BugReports: https://github.com/berndbischl/mlr/issues
 License: BSD_3_clause + file LICENSE
 Depends: R (>= 3.0.0), ParamHelpers (>= 1.1-36) 
-Imports: BBmisc (>= 1.3-64), parallelMap, codetools
+Imports: BBmisc (>= 1.4), parallelMap, codetools
 Suggests: testthat, snowfall, ada, adabag, cmaes, DiceKriging,
         DiceOptim, e1071, earth, FNN, FSelector, gbm, irace, kernlab,
         kknn, klaR, mboost, mda, mlbench, nnet, party, penalized, pls,
