--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,6 +144,7 @@ S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,regr.blackboost)
+S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.gbm)
@@ -152,6 +153,7 @@ S3method(makeRLearner,regr.km)
 S3method(makeRLearner,regr.ksvm)
 S3method(makeRLearner,regr.lm)
 S3method(makeRLearner,regr.mars)
+S3method(makeRLearner,regr.mob)
 S3method(makeRLearner,regr.nnet)
 S3method(makeRLearner,regr.pcr)
 S3method(makeRLearner,regr.penalized.lasso)
@@ -193,6 +195,7 @@ S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,PreprocWrapper)
+S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.gbm)
@@ -201,6 +204,7 @@ S3method(predictLearner,regr.km)
 S3method(predictLearner,regr.ksvm)
 S3method(predictLearner,regr.lm)
 S3method(predictLearner,regr.mars)
+S3method(predictLearner,regr.mob)
 S3method(predictLearner,regr.nnet)
 S3method(predictLearner,regr.pcr)
 S3method(predictLearner,regr.penalized.lasso)
@@ -273,6 +277,7 @@ S3method(trainLearner,regr.km)
 S3method(trainLearner,regr.ksvm)
 S3method(trainLearner,regr.lm)
 S3method(trainLearner,regr.mars)
+S3method(trainLearner,regr.mob)
 S3method(trainLearner,regr.nnet)
 S3method(trainLearner,regr.pcr)
 S3method(trainLearner,regr.penalized.lasso)
