--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
 install:
+  - ./travis-tool.sh aptget_install r-cran-rjava
   - ./travis-tool.sh github_package testthat
   - ./travis-tool.sh github_package assertthat
   - ./travis-tool.sh github_package berndbischl/BBmisc
