--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -192,3 +192,5 @@ Collate:
     'RLearner_regr_mob.R'
     'RLearner_regr_crs.R'
     'PreprocImputeWrapper.R'
+    'Impute.R'
+    'ImputeMethods.R'
