--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,14 +28,14 @@ export(getTaskTargets)
 export(getTuneResult)
 export(gmean)
 export(gpr)
-export(imp.const)
-export(imp.hist)
-export(imp.max)
-export(imp.median)
-export(imp.min)
-export(imp.mode)
-export(imp.normal)
 export(impute)
+export(imputeConstant)
+export(imputeHist)
+export(imputeMax)
+export(imputeMedian)
+export(imputeMin)
+export(imputeMode)
+export(imputeNormal)
 export(learnerArgsToControl)
 export(listLearners)
 export(listLearnersForTask)
