--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,7 @@ export(train.sd)
 export(train.sum)
 export(tuneParams)
 export(tuneThreshold)
+export(undersample)
 import(BBmisc)
 importFrom(codetools,findGlobals)
 importFrom(stats,predict)
