clean up impute stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ S3method(print,FailureModel)
 S3method(print,FeatSelControl)
 S3method(print,FeatSelResult)
 S3method(print,HoldoutDesc)
+S3method(print,ImputationDesc)
 S3method(print,Learner)
 S3method(print,Measure)
 S3method(print,OptModel)
@@ -130,6 +131,7 @@ S3method(print,TuneResult)
 S3method(print,WrappedModel)
 S3method(print,analyzeFeatSelResult)
 S3method(reimpute,data.frame)
+S3method(reimpute,list)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
 S3method(trainLearner,BaggingWrapper)
@@ -221,6 +223,7 @@ export(imputeMedian)
 export(imputeMin)
 export(imputeMode)
 export(imputeNormal)
+export(imputeUniform)
 export(learnerArgsToControl)
 export(listLearners)
 export(listLearnersForTask)
@@ -235,6 +238,7 @@ export(makeFeatSelControlRandom)
 export(makeFeatSelControlSequential)
 export(makeFilterWrapper)
 export(makeFixedHoldoutInstance)
+export(makeImputeMethod)
 export(makeLearner)
 export(makeMeasure)
 export(makeOversampleWrapper)
