better tutorial knitting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ S3method(trainLearner,regr.rvm)
 S3method(undersample,ClassifTask)
 S3method(undersample,data.frame)
 export(acc)
+export(analyzeFeatSelResult)
 export(asROCRPrediction)
 export(auc)
 export(b632)
@@ -228,6 +229,7 @@ export(learnerArgsToControl)
 export(listLearners)
 export(listLearnersForTask)
 export(mae)
+export(makeAggregation)
 export(makeBaggingWrapper)
 export(makeClassifTask)
 export(makeCostMeasure)
@@ -285,6 +287,7 @@ export(test.max)
 export(test.mean)
 export(test.median)
 export(test.min)
+export(test.range)
 export(test.sd)
 export(test.sqrt.of.mean)
 export(test.sum)
@@ -301,7 +304,9 @@ export(train.max)
 export(train.mean)
 export(train.median)
 export(train.min)
+export(train.range)
 export(train.sd)
+export(train.sqrt.of.mean)
 export(train.sum)
 export(trainLearner)
 export(tuneParams)
