--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,6 +191,7 @@ export(asROCRPrediction)
 export(auc)
 export(b632)
 export(b632plus)
+export(benchmark)
 export(ber)
 export(configureMlr)
 export(f1)
