--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,12 @@ License: BSD_3_clause + file LICENSE
 Depends:
     R (>= 3.0.0),
     ParamHelpers (>= 1.2),
+    BBmisc (>= 1.5),
     stats
 Imports:
-    BBmisc (>= 1.4),
     parallelMap,
-    codetools
+    codetools,
+    survival
 Suggests:
     testthat,
     snowfall,
