--- a/NAMESPACE
+++ b/NAMESPACE
@@ -252,6 +252,7 @@ export(makeRLearnerRegr)
 export(makeRegrTask)
 export(makeResampleDesc)
 export(makeResampleInstance)
+export(makeSurvTask)
 export(makeTuneControlCMAES)
 export(makeTuneControlGrid)
 export(makeTuneControlIrace)
@@ -318,3 +319,4 @@ import(ParamHelpers)
 import(parallelMap)
 importFrom(codetools,findGlobals)
 importFrom(stats,predict)
+importFrom(survival,Surv)
