--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ S3method(oversample,data.frame)
 S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
+S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,TuneWrapper)
@@ -135,6 +136,7 @@ S3method(reimpute,list)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
 S3method(trainLearner,BaggingWrapper)
+S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
@@ -204,6 +206,7 @@ export(fp)
 export(fpr)
 export(getBaggingModels)
 export(getConfMatrix)
+export(getFeatSelResult)
 export(getFilteredFeatures)
 export(getHyperPars)
 export(getLearnerModel)
@@ -239,6 +242,7 @@ export(makeFeatSelControlExhaustive)
 export(makeFeatSelControlGA)
 export(makeFeatSelControlRandom)
 export(makeFeatSelControlSequential)
+export(makeFeatSelWrapper)
 export(makeFilterWrapper)
 export(makeFixedHoldoutInstance)
 export(makeImputeMethod)
