--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
+S3method(makePrediction,ClassifTaskDesc)
+S3method(makePrediction,RegrTaskDesc)
+S3method(makePrediction,SurvTaskDesc)
 S3method(makeRLearner,classif.J48)
 S3method(makeRLearner,classif.JRip)
 S3method(makeRLearner,classif.OneR)
@@ -51,6 +54,7 @@ S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
+S3method(makeRLearner,surv.coxph)
 S3method(makeWrappedModel,BaggingWrapper)
 S3method(makeWrappedModel,BaseWrapper)
 S3method(makeWrappedModel,Learner)
@@ -107,6 +111,7 @@ S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
+S3method(predictLearner,surv.coxph)
 S3method(print,Aggregation)
 S3method(print,BaggingModel)
 S3method(print,BaseWrapper)
@@ -185,6 +190,7 @@ S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
+S3method(trainLearner,surv.coxph)
 S3method(undersample,ClassifTask)
 S3method(undersample,data.frame)
 export(acc)
@@ -195,6 +201,7 @@ export(b632)
 export(b632plus)
 export(benchmark)
 export(ber)
+export(cindex)
 export(configureMlr)
 export(f1)
 export(fdr)
@@ -253,6 +260,7 @@ export(makePreprocWrapper)
 export(makeRLearner)
 export(makeRLearnerClassif)
 export(makeRLearnerRegr)
+export(makeRLearnerSurv)
 export(makeRegrTask)
 export(makeResampleDesc)
 export(makeResampleInstance)
