--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ export(gpr)
 export(impute)
 export(imputeConstant)
 export(imputeHist)
+export(imputeLearner)
 export(imputeMax)
 export(imputeMedian)
 export(imputeMin)
