--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
 S3method(makeRLearner,surv.coxph)
+S3method(makeRLearner,surv.glmnet)
 S3method(makeWrappedModel,BaggingWrapper)
 S3method(makeWrappedModel,BaseWrapper)
 S3method(makeWrappedModel,Learner)
@@ -112,6 +113,7 @@ S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
 S3method(predictLearner,surv.coxph)
+S3method(predictLearner,surv.glmnet)
 S3method(print,Aggregation)
 S3method(print,BaggingModel)
 S3method(print,BaseWrapper)
@@ -191,6 +193,7 @@ S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
 S3method(trainLearner,surv.coxph)
+S3method(trainLearner,surv.glmnet)
 S3method(undersample,ClassifTask)
 S3method(undersample,data.frame)
 export(acc)
