--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ S3method(makePrediction,RegrTaskDesc)
 S3method(makePrediction,SurvTaskDesc)
 S3method(makeRLearner,classif.J48)
 S3method(makeRLearner,classif.JRip)
+S3method(makeRLearner,classif.LiblineaRBinary)
+S3method(makeRLearner,classif.LiblineaRLogReg)
+S3method(makeRLearner,classif.LiblineaRMultiClass)
 S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
@@ -54,6 +57,7 @@ S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
+S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.coxph)
 S3method(makeRLearner,surv.glmnet)
 S3method(makeWrappedModel,BaggingWrapper)
@@ -71,6 +75,9 @@ S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,TuneWrapper)
 S3method(predictLearner,classif.J48)
 S3method(predictLearner,classif.JRip)
+S3method(predictLearner,classif.LiblineaRBinary)
+S3method(predictLearner,classif.LiblineaRLogReg)
+S3method(predictLearner,classif.LiblineaRMultiClass)
 S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.blackboost)
@@ -112,6 +119,7 @@ S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
+S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.coxph)
 S3method(predictLearner,surv.glmnet)
 S3method(print,Aggregation)
@@ -151,6 +159,9 @@ S3method(trainLearner,TuneWrapper)
 S3method(trainLearner,UndersampleWrapper)
 S3method(trainLearner,classif.J48)
 S3method(trainLearner,classif.JRip)
+S3method(trainLearner,classif.LiblineaRBinary)
+S3method(trainLearner,classif.LiblineaRLogReg)
+S3method(trainLearner,classif.LiblineaRMultiClass)
 S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
@@ -192,6 +203,7 @@ S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
+S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.coxph)
 S3method(trainLearner,surv.glmnet)
 S3method(undersample,ClassifTask)
