Improvement of removeConstantFeatures

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,8 @@ S3method(print,WrappedModel)
 S3method(print,analyzeFeatSelResult)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
+S3method(removeConstantFeatures,SupervisedTask)
+S3method(removeConstantFeatures,data.frame)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
 S3method(trainLearner,BaggingWrapper)
@@ -302,6 +304,7 @@ export(performance)
 export(ppv)
 export(predictLearner)
 export(reimpute)
+export(removeConstantFeatures)
 export(resample)
 export(rmse)
 export(sae)
