--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,8 @@
 S3method(as.data.frame,Prediction)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
+S3method(estimateResidualVariance,Learner)
+S3method(estimateResidualVariance,WrappedModel)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
@@ -33,10 +35,12 @@ S3method(makeRLearner,classif.mda)
 S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.nnet)
+S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
+S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.crs)
@@ -96,10 +100,12 @@ S3method(predictLearner,classif.mda)
 S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.nnet)
+S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
+S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.earth)
@@ -182,10 +188,12 @@ S3method(trainLearner,classif.mda)
 S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.nnet)
+S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
+S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.fnn)
@@ -218,6 +226,7 @@ export(b632plus)
 export(ber)
 export(cindex)
 export(configureMlr)
+export(estimateResidualVariance)
 export(f1)
 export(fdr)
 export(featperc)
@@ -232,6 +241,7 @@ export(getFeatSelResult)
 export(getFilteredFeatures)
 export(getHyperPars)
 export(getLearnerModel)
+export(getMlrOptions)
 export(getParamSet)
 export(getProbabilities)
 export(getTaskData)
