added survival learner randomForestSRC + rrlda dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,9 @@ Suggests:
     pls,
     pROC,
     randomForest,
+    randomForestSRC,
     reshape,
+    rrlda,
     robustbase,
     rpart,
     rsm,
