--- a/NAMESPACE
+++ b/NAMESPACE
@@ -305,6 +305,7 @@ export(medae)
 export(medse)
 export(mmce)
 export(mse)
+export(multiclass.auc)
 export(npv)
 export(oversample)
 export(performance)
