reverted classif_glmboost

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
 S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.coxph)
+S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeWrappedModel,BaggingWrapper)
@@ -128,6 +129,7 @@ S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
 S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.coxph)
+S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(print,Aggregation)
@@ -216,6 +218,7 @@ S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
 S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.coxph)
+S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
 S3method(trainLearner,surv.randomForestSRC)
 S3method(undersample,ClassifTask)
