--- a/NAMESPACE
+++ b/NAMESPACE
@@ -236,7 +236,6 @@ export(estimateResidualVariance)
 export(f1)
 export(fdr)
 export(featperc)
-export(filterFeatures)
 export(fn)
 export(fnr)
 export(fp)
@@ -244,6 +243,7 @@ export(fpr)
 export(getBaggingModels)
 export(getConfMatrix)
 export(getFeatSelResult)
+export(getFeatureFilterValues)
 export(getFilteredFeatures)
 export(getHyperPars)
 export(getLearnerModel)
