--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,10 @@ S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
-S3method(makePrediction,ClassifTaskDesc)
-S3method(makePrediction,RegrTaskDesc)
-S3method(makePrediction,SurvTaskDesc)
+S3method(makePrediction,TaskDescClassif)
+S3method(makePrediction,TaskDescCostSens)
+S3method(makePrediction,TaskDescRegr)
+S3method(makePrediction,TaskDescSurv)
 S3method(makeRLearner,classif.J48)
 S3method(makeRLearner,classif.JRip)
 S3method(makeRLearner,classif.LiblineaRBinary)
@@ -66,8 +67,13 @@ S3method(makeRLearner,surv.coxph)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.randomForestSRC)
+S3method(makeTaskDesc,ClassifTask)
+S3method(makeTaskDesc,CostSensTask)
+S3method(makeTaskDesc,RegrTask)
+S3method(makeTaskDesc,SurvTask)
 S3method(makeWrappedModel,BaggingWrapper)
 S3method(makeWrappedModel,BaseWrapper)
+S3method(makeWrappedModel,CostSensRegrWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,OptWrapper)
 S3method(oversample,ClassifTask)
@@ -75,6 +81,7 @@ S3method(oversample,data.frame)
 S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
+S3method(predictLearner,CostSensRegrWrapper)
 S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,PreprocWrapper)
@@ -137,6 +144,7 @@ S3method(print,BaggingModel)
 S3method(print,BaseWrapper)
 S3method(print,BaseWrapperModel)
 S3method(print,ClassifTask)
+S3method(print,CostSensTask)
 S3method(print,FailureModel)
 S3method(print,FeatSelControl)
 S3method(print,FeatSelResult)
@@ -162,6 +170,7 @@ S3method(removeConstantFeatures,data.frame)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
 S3method(trainLearner,BaggingWrapper)
+S3method(trainLearner,CostSensRegrWrapper)
 S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,OversampleWrapper)
@@ -242,6 +251,7 @@ export(fp)
 export(fpr)
 export(getBaggingModels)
 export(getConfMatrix)
+export(getCostSensRegrModels)
 export(getFeatSelResult)
 export(getFeatureFilterValues)
 export(getFilteredFeatures)
@@ -250,6 +260,7 @@ export(getLearnerModel)
 export(getMlrOptions)
 export(getParamSet)
 export(getProbabilities)
+export(getTaskCosts)
 export(getTaskData)
 export(getTaskFeatureNames)
 export(getTaskFormula)
@@ -276,6 +287,8 @@ export(makeAggregation)
 export(makeBaggingWrapper)
 export(makeClassifTask)
 export(makeCostMeasure)
+export(makeCostSensRegrWrapper)
+export(makeCostSensTask)
 export(makeCustomResampledMeasure)
 export(makeFeatSelControlExhaustive)
 export(makeFeatSelControlGA)
@@ -306,6 +319,8 @@ export(makeTuneWrapper)
 export(makeUndersampleWrapper)
 export(makeWrappedModel)
 export(mcc)
+export(mcp)
+export(meancosts)
 export(measures)
 export(medae)
 export(medse)
