add class:knn learner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.glmboost)
 S3method(makeRLearner,classif.kknn)
+S3method(makeRLearner,classif.knn)
 S3method(makeRLearner,classif.ksvm)
 S3method(makeRLearner,classif.lda)
 S3method(makeRLearner,classif.logreg)
@@ -66,6 +67,7 @@ S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.coxph)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
+S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeTaskDesc,ClassifTask)
 S3method(makeTaskDesc,CostSensTask)
@@ -73,7 +75,9 @@ S3method(makeTaskDesc,RegrTask)
 S3method(makeTaskDesc,SurvTask)
 S3method(makeWrappedModel,BaggingWrapper)
 S3method(makeWrappedModel,BaseWrapper)
+S3method(makeWrappedModel,CostSensClassifWrapper)
 S3method(makeWrappedModel,CostSensRegrWrapper)
+S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,OptWrapper)
 S3method(oversample,ClassifTask)
@@ -82,6 +86,7 @@ S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
 S3method(predictLearner,CostSensRegrWrapper)
+S3method(predictLearner,CostSensWeightedPairsWrapper)
 S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,PreprocWrapper)
@@ -100,6 +105,7 @@ S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.glmboost)
 S3method(predictLearner,classif.kknn)
+S3method(predictLearner,classif.knn)
 S3method(predictLearner,classif.ksvm)
 S3method(predictLearner,classif.lda)
 S3method(predictLearner,classif.logreg)
@@ -138,6 +144,7 @@ S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.coxph)
 S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
+S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(print,Aggregation)
 S3method(print,BaggingModel)
@@ -170,7 +177,9 @@ S3method(removeConstantFeatures,data.frame)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
 S3method(trainLearner,BaggingWrapper)
+S3method(trainLearner,CostSensClassifWrapper)
 S3method(trainLearner,CostSensRegrWrapper)
+S3method(trainLearner,CostSensWeightedPairsWrapper)
 S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,OversampleWrapper)
@@ -192,6 +201,7 @@ S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.glmboost)
 S3method(trainLearner,classif.kknn)
+S3method(trainLearner,classif.knn)
 S3method(trainLearner,classif.ksvm)
 S3method(trainLearner,classif.lda)
 S3method(trainLearner,classif.logreg)
@@ -229,6 +239,7 @@ S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.coxph)
 S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
+S3method(trainLearner,surv.penalized)
 S3method(trainLearner,surv.randomForestSRC)
 S3method(undersample,ClassifTask)
 S3method(undersample,data.frame)
@@ -251,7 +262,9 @@ export(fp)
 export(fpr)
 export(getBaggingModels)
 export(getConfMatrix)
+export(getCostSensClassifModel)
 export(getCostSensRegrModels)
+export(getCostSensWeightedPairsModels)
 export(getFeatSelResult)
 export(getFeatureFilterValues)
 export(getFilteredFeatures)
@@ -287,8 +300,10 @@ export(makeAggregation)
 export(makeBaggingWrapper)
 export(makeClassifTask)
 export(makeCostMeasure)
+export(makeCostSensClassifWrapper)
 export(makeCostSensRegrWrapper)
 export(makeCostSensTask)
+export(makeCostSensWeightedPairsWrapper)
 export(makeCustomResampledMeasure)
 export(makeFeatSelControlExhaustive)
 export(makeFeatSelControlGA)
