--- a/NAMESPACE
+++ b/NAMESPACE
@@ -287,6 +287,7 @@ export(imputeConstant)
 export(imputeHist)
 export(imputeLearner)
 export(imputeMax)
+export(imputeMean)
 export(imputeMedian)
 export(imputeMin)
 export(imputeMode)
