Add learner geoDA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(makePrediction,TaskDescClassif)
 S3method(makePrediction,TaskDescCostSens)
 S3method(makePrediction,TaskDescRegr)
 S3method(makePrediction,TaskDescSurv)
+S3method(makeRLearner,classif.IBk)
 S3method(makeRLearner,classif.J48)
 S3method(makeRLearner,classif.JRip)
 S3method(makeRLearner,classif.LiblineaRBinary)
@@ -25,6 +26,7 @@ S3method(makeRLearner,classif.boosting)
 S3method(makeRLearner,classif.ctree)
 S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gbm)
+S3method(makeRLearner,classif.geoDA)
 S3method(makeRLearner,classif.glmboost)
 S3method(makeRLearner,classif.kknn)
 S3method(makeRLearner,classif.knn)
@@ -91,6 +93,7 @@ S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,TuneWrapper)
+S3method(predictLearner,classif.IBk)
 S3method(predictLearner,classif.J48)
 S3method(predictLearner,classif.JRip)
 S3method(predictLearner,classif.LiblineaRBinary)
@@ -103,6 +106,7 @@ S3method(predictLearner,classif.boosting)
 S3method(predictLearner,classif.ctree)
 S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gbm)
+S3method(predictLearner,classif.geoDA)
 S3method(predictLearner,classif.glmboost)
 S3method(predictLearner,classif.kknn)
 S3method(predictLearner,classif.knn)
@@ -186,6 +190,7 @@ S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
 S3method(trainLearner,TuneWrapper)
 S3method(trainLearner,UndersampleWrapper)
+S3method(trainLearner,classif.IBk)
 S3method(trainLearner,classif.J48)
 S3method(trainLearner,classif.JRip)
 S3method(trainLearner,classif.LiblineaRBinary)
@@ -199,6 +204,7 @@ S3method(trainLearner,classif.boosting)
 S3method(trainLearner,classif.ctree)
 S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gbm)
+S3method(trainLearner,classif.geoDA)
 S3method(trainLearner,classif.glmboost)
 S3method(trainLearner,classif.kknn)
 S3method(trainLearner,classif.knn)
