--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.plr)
+S3method(makeRLearner,classif.plsDA)
 S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.rda)
@@ -120,6 +121,7 @@ S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.plr)
+S3method(predictLearner,classif.plsDA)
 S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.rda)
@@ -218,6 +220,7 @@ S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.plr)
+S3method(trainLearner,classif.plsDA)
 S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.rda)
