Add linDA and quaDA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(makeRLearner,classif.kknn)
 S3method(makeRLearner,classif.knn)
 S3method(makeRLearner,classif.ksvm)
 S3method(makeRLearner,classif.lda)
+S3method(makeRLearner,classif.linDA)
 S3method(makeRLearner,classif.logreg)
 S3method(makeRLearner,classif.lssvm)
 S3method(makeRLearner,classif.lvq1)
@@ -42,6 +43,7 @@ S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsDA)
 S3method(makeRLearner,classif.qda)
+S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
@@ -113,6 +115,7 @@ S3method(predictLearner,classif.kknn)
 S3method(predictLearner,classif.knn)
 S3method(predictLearner,classif.ksvm)
 S3method(predictLearner,classif.lda)
+S3method(predictLearner,classif.linDA)
 S3method(predictLearner,classif.logreg)
 S3method(predictLearner,classif.lssvm)
 S3method(predictLearner,classif.lvq1)
@@ -123,6 +126,7 @@ S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsDA)
 S3method(predictLearner,classif.qda)
+S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
@@ -212,6 +216,7 @@ S3method(trainLearner,classif.kknn)
 S3method(trainLearner,classif.knn)
 S3method(trainLearner,classif.ksvm)
 S3method(trainLearner,classif.lda)
+S3method(trainLearner,classif.linDA)
 S3method(trainLearner,classif.logreg)
 S3method(trainLearner,classif.lssvm)
 S3method(trainLearner,classif.lvq1)
@@ -222,6 +227,7 @@ S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsDA)
 S3method(trainLearner,classif.qda)
+S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
