clean up some wrong details in new costsens methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ S3method(oversample,data.frame)
 S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
+S3method(predictLearner,CostSensClassifWrapper)
 S3method(predictLearner,CostSensRegrWrapper)
 S3method(predictLearner,CostSensWeightedPairsWrapper)
 S3method(predictLearner,FeatSelWrapper)
