--- a/NAMESPACE
+++ b/NAMESPACE
@@ -266,8 +266,12 @@ export(auc)
 export(b632)
 export(b632plus)
 export(ber)
+export(bootstrapB632)
+export(bootstrapB632plus)
+export(bootstrapOOB)
 export(cindex)
 export(configureMlr)
+export(crossval)
 export(estimateResidualVariance)
 export(f1)
 export(fdr)
@@ -298,6 +302,7 @@ export(getTaskTargets)
 export(getTuneResult)
 export(gmean)
 export(gpr)
+export(holdout)
 export(impute)
 export(imputeConstant)
 export(imputeHist)
@@ -366,6 +371,7 @@ export(ppv)
 export(predictLearner)
 export(reimpute)
 export(removeConstantFeatures)
+export(repcv)
 export(resample)
 export(rmse)
 export(sae)
@@ -376,6 +382,7 @@ export(setHyperPars2)
 export(setPredictType)
 export(setThreshold)
 export(sse)
+export(subsample)
 export(subsetTask)
 export(test.max)
 export(test.mean)
