Split filterFeatures and getFeatureFilterValues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@ S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
+S3method(filterFeatures,ClassifTask)
+S3method(filterFeatures,data.frame)
+S3method(getFeatureFilterValues,SupervisedTask)
+S3method(getFeatureFilterValues,data.frame)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
@@ -276,6 +280,7 @@ export(estimateResidualVariance)
 export(f1)
 export(fdr)
 export(featperc)
+export(filterFeatures)
 export(fn)
 export(fnr)
 export(fp)
