--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,18 @@
 S3method(as.data.frame,Prediction)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
+S3method(checkTask,ClassifTask)
+S3method(checkTask,CostSensTask)
+S3method(checkTask,RegrTask)
+S3method(checkTask,SupervisedTask)
+S3method(checkTask,SurvTask)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
+S3method(fixupData,ClassifTask)
+S3method(fixupData,CostSensTask)
+S3method(fixupData,RegrTask)
+S3method(fixupData,SupervisedTask)
+S3method(fixupData,SurvTask)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
