--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ Description: Interface to a large number of classification and
     modern optimization techniques. Filter and wrapper methods for
     feature selection. Extension of basic learners with additional
     operations. Nested resampling.
-Author: Bernd Bischl <bernd_bischl@gmx.net>
+Author: Bernd Bischl <bernd_bischl@gmx.net>,
+    Michel Lang <lang@statistik.tu-dortmund.de>,
+    Jakob Richter <code@jakob-r.de>
 Maintainer: Bernd Bischl <bernd_bischl@gmx.net>
 URL: https://github.com/berndbischl/mlr
 BugReports: https://github.com/berndbischl/mlr/issues
