new filter methods correctly exported now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(checkTask,SupervisedTask)
 S3method(checkTask,SurvTask)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
+S3method(filter,SupervisedTask)
+S3method(filter,data.frame)
 S3method(fixupData,ClassifTask)
 S3method(fixupData,CostSensTask)
 S3method(fixupData,RegrTask)
