--- a/NAMESPACE
+++ b/NAMESPACE
@@ -432,6 +432,7 @@ export(trainLearner)
 export(tuneParams)
 export(tuneThreshold)
 export(undersample)
+export(visualizeLearner)
 import(BBmisc)
 import(ParamHelpers)
 import(parallelMap)
