--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ S3method(checkTask,CostSensTask)
 S3method(checkTask,RegrTask)
 S3method(checkTask,SupervisedTask)
 S3method(checkTask,SurvTask)
+S3method(downsample,ResampleInstance)
+S3method(downsample,SupervisedTask)
+S3method(downsample,data.frame)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
 S3method(filterFeatures,SupervisedTask)
@@ -218,6 +221,7 @@ S3method(trainLearner,BaggingWrapper)
 S3method(trainLearner,CostSensClassifWrapper)
 S3method(trainLearner,CostSensRegrWrapper)
 S3method(trainLearner,CostSensWeightedPairsWrapper)
+S3method(trainLearner,DownsampleWrapper)
 S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,OversampleWrapper)
@@ -301,6 +305,7 @@ export(bootstrapOOB)
 export(cindex)
 export(configureMlr)
 export(crossval)
+export(downsample)
 export(estimateResidualVariance)
 export(f1)
 export(fdr)
@@ -360,6 +365,7 @@ export(makeCostSensRegrWrapper)
 export(makeCostSensTask)
 export(makeCostSensWeightedPairsWrapper)
 export(makeCustomResampledMeasure)
+export(makeDownsampleWrapper)
 export(makeFeatSelControlExhaustive)
 export(makeFeatSelControlGA)
 export(makeFeatSelControlRandom)
