fixes for benchmark

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ S3method(getFeatSelResult,WrappedModel)
 S3method(getFeatureFilterValues,SupervisedTask)
 S3method(getFeatureFilterValues,data.frame)
 S3method(getFilterResult,BenchmarkResult)
+S3method(getFilterResult,WrappedModel)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
@@ -318,6 +319,7 @@ export(getCostSensRegrModels)
 export(getCostSensWeightedPairsModels)
 export(getFeatSelResult)
 export(getFeatureFilterValues)
+export(getFilterResult)
 export(getFilteredFeatures)
 export(getHyperPars)
 export(getLearnerModel)
