--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,7 +124,7 @@ S3method(predictLearner,CostSensRegrWrapper)
 S3method(predictLearner,CostSensWeightedPairsWrapper)
 S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
-S3method(predictLearner,MetaLearner)
+S3method(predictLearner,ModelMultiplexer)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,TuneWrapper)
 S3method(predictLearner,classif.IBk)
@@ -226,7 +226,7 @@ S3method(trainLearner,CostSensWeightedPairsWrapper)
 S3method(trainLearner,DownsampleWrapper)
 S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
-S3method(trainLearner,MetaLearner)
+S3method(trainLearner,ModelMultiplexer)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
 S3method(trainLearner,TuneWrapper)
@@ -380,7 +380,7 @@ export(makeFixedHoldoutInstance)
 export(makeImputeMethod)
 export(makeLearner)
 export(makeMeasure)
-export(makeMetaLearner)
+export(makeModelMultiplexer)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
 export(makeRLearner)
