--- a/NAMESPACE
+++ b/NAMESPACE
@@ -411,6 +411,7 @@ export(multiclass.auc)
 export(npv)
 export(oversample)
 export(performance)
+export(plotThreshVsPerf)
 export(ppv)
 export(predictLearner)
 export(reimpute)
