--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,10 +24,10 @@ S3method(fixupData,SurvTask)
 S3method(getAggrMeasures,BenchmarkResult)
 S3method(getFeatSelResult,BenchmarkResult)
 S3method(getFeatSelResult,WrappedModel)
-S3method(getFeatureFilterValues,SupervisedTask)
-S3method(getFeatureFilterValues,data.frame)
 S3method(getFilterResult,BenchmarkResult)
 S3method(getFilterResult,WrappedModel)
+S3method(getFilterValues,SupervisedTask)
+S3method(getFilterValues,data.frame)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
@@ -309,6 +309,7 @@ export(cindex)
 export(configureMlr)
 export(crossval)
 export(downsample)
+export(dropFeatures)
 export(estimateResidualVariance)
 export(f1)
 export(fdr)
@@ -325,8 +326,9 @@ export(getCostSensClassifModel)
 export(getCostSensRegrModels)
 export(getCostSensWeightedPairsModels)
 export(getFeatSelResult)
-export(getFeatureFilterValues)
+export(getFilterMethods)
 export(getFilterResult)
+export(getFilterValues)
 export(getFilteredFeatures)
 export(getHyperPars)
 export(getLearnerModel)
