clean up filter stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -354,6 +354,7 @@ export(imputeMin)
 export(imputeMode)
 export(imputeNormal)
 export(imputeUniform)
+export(ks)
 export(learnerArgsToControl)
 export(listLearners)
 export(listLearnersForTask)
