--- a/NAMESPACE
+++ b/NAMESPACE
@@ -412,6 +412,7 @@ export(multiclass.auc)
 export(npv)
 export(oversample)
 export(performance)
+export(plotFilterValues)
 export(plotThreshVsPerf)
 export(ppv)
 export(predictLearner)
