new fun: getTaskNFeats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -340,6 +340,7 @@ export(getTaskData)
 export(getTaskFeatureNames)
 export(getTaskFormula)
 export(getTaskFormulaAsString)
+export(getTaskNFeats)
 export(getTaskTargets)
 export(getTuneResult)
 export(gmean)
