export property functions fixes #98

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -294,6 +294,7 @@ S3method(trainLearner,surv.randomForestSRC)
 S3method(undersample,ClassifTask)
 S3method(undersample,data.frame)
 export(acc)
+export(addProperties)
 export(analyzeFeatSelResult)
 export(asROCRPrediction)
 export(auc)
@@ -346,6 +347,7 @@ export(getTaskTargets)
 export(getTuneResult)
 export(gmean)
 export(gpr)
+export(hasProperties)
 export(holdout)
 export(impute)
 export(imputeConstant)
@@ -420,6 +422,7 @@ export(ppv)
 export(predictLearner)
 export(reimpute)
 export(removeConstantFeatures)
+export(removeProperties)
 export(repcv)
 export(resample)
 export(rmse)
@@ -429,6 +432,7 @@ export(setAggregation)
 export(setHyperPars)
 export(setHyperPars2)
 export(setPredictType)
+export(setProperties)
 export(setThreshold)
 export(showHyperPars)
 export(sse)
