refactor learner properties slightly and fix docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -348,6 +348,8 @@ export(getTuneResult)
 export(gmean)
 export(gpr)
 export(hasProperties)
+export(hasPropertiesAll)
+export(hasProperty)
 export(holdout)
 export(impute)
 export(imputeConstant)
