refactor properties again and visualizeLearner ---> plotLearnerPrediction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -348,8 +348,6 @@ export(getTuneResult)
 export(gmean)
 export(gpr)
 export(hasProperties)
-export(hasPropertiesAll)
-export(hasProperty)
 export(holdout)
 export(impute)
 export(imputeConstant)
@@ -419,6 +417,7 @@ export(npv)
 export(oversample)
 export(performance)
 export(plotFilterValues)
+export(plotLearnerPrediction)
 export(plotThreshVsPerf)
 export(ppv)
 export(predictLearner)
@@ -469,7 +468,6 @@ export(trainLearner)
 export(tuneParams)
 export(tuneThreshold)
 export(undersample)
-export(visualizeLearner)
 import(BBmisc)
 import(ParamHelpers)
 import(parallelMap)
