--- a/NAMESPACE
+++ b/NAMESPACE
@@ -337,6 +337,7 @@ export(getMlrOptions)
 export(getParamSet)
 export(getPredictions)
 export(getProbabilities)
+export(getProperties)
 export(getTaskCosts)
 export(getTaskData)
 export(getTaskFeatureNames)
