getProperties removed (name clash with package methods)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -337,7 +337,6 @@ export(getMlrOptions)
 export(getParamSet)
 export(getPredictions)
 export(getProbabilities)
-export(getProperties)
 export(getTaskCosts)
 export(getTaskData)
 export(getTaskFeatureNames)
@@ -364,6 +363,8 @@ export(imputeUniform)
 export(learnerArgsToControl)
 export(listLearners)
 export(listLearnersForTask)
+export(listMeasures)
+export(listMeasuresForTask)
 export(mae)
 export(makeAggregation)
 export(makeBaggingWrapper)
