--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,8 @@ S3method(makeWrappedModel,CostSensRegrWrapper)
 S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,OptWrapper)
+S3method(normalizeFeatures,SupervisedTask)
+S3method(normalizeFeatures,data.frame)
 S3method(oversample,ClassifTask)
 S3method(oversample,data.frame)
 S3method(predict,WrappedModel)
@@ -414,6 +416,7 @@ export(medse)
 export(mmce)
 export(mse)
 export(multiclass.auc)
+export(normalizeFeatures)
 export(npv)
 export(oversample)
 export(performance)
