--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,9 @@ S3method(getParamSet,Learner)
 S3method(getPredictions,BenchmarkResult)
 S3method(getTuneResult,BenchmarkResult)
 S3method(getTuneResult,WrappedModel)
+S3method(listLearners,SupervisedTask)
+S3method(listLearners,character)
+S3method(listLearners,default)
 S3method(makePrediction,TaskDescClassif)
 S3method(makePrediction,TaskDescCostSens)
 S3method(makePrediction,TaskDescRegr)
@@ -364,7 +367,6 @@ export(imputeNormal)
 export(imputeUniform)
 export(learnerArgsToControl)
 export(listLearners)
-export(listLearnersForTask)
 export(listMeasures)
 export(listMeasuresForTask)
 export(mae)
