--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,9 @@ S3method(getTuneResult,WrappedModel)
 S3method(listLearners,SupervisedTask)
 S3method(listLearners,character)
 S3method(listLearners,default)
+S3method(listMeasures,SupervisedTask)
+S3method(listMeasures,character)
+S3method(listMeasures,default)
 S3method(makePrediction,TaskDescClassif)
 S3method(makePrediction,TaskDescCostSens)
 S3method(makePrediction,TaskDescRegr)
@@ -368,7 +371,6 @@ export(imputeUniform)
 export(learnerArgsToControl)
 export(listLearners)
 export(listMeasures)
-export(listMeasuresForTask)
 export(mae)
 export(makeAggregation)
 export(makeBaggingWrapper)
