--- a/NAMESPACE
+++ b/NAMESPACE
@@ -334,7 +334,6 @@ export(getCostSensClassifModel)
 export(getCostSensRegrModels)
 export(getCostSensWeightedPairsModels)
 export(getFeatSelResult)
-export(getFilterMethods)
 export(getFilterResult)
 export(getFilterValues)
 export(getFilteredFeatures)
@@ -369,6 +368,7 @@ export(imputeMode)
 export(imputeNormal)
 export(imputeUniform)
 export(learnerArgsToControl)
+export(listFilterMethods)
 export(listLearners)
 export(listMeasures)
 export(mae)
